[gd_scene load_steps=17 format=3 uid="uid://ccxgrqw78ea0t"]

[ext_resource type="Script" uid="uid://8hdp5glutii8" path="res://root.gd" id="1_pq8q7"]
[ext_resource type="Script" uid="uid://cgsub2825acg2" path="res://Cube_Spawner.gd" id="2_bf3um"]
[ext_resource type="Script" uid="uid://ckskpjmx8drey" path="res://PointingController.gd" id="2_l8v81"]
[ext_resource type="PackedScene" uid="uid://cnwp7ndjr4s8y" path="res://Quest2Controllers/Quest2Controllers/OculusQuest2TouchController_Left.gltf" id="3_vyht1"]
[ext_resource type="Material" uid="uid://dokgepdf8flj" path="res://red.tres" id="4_bf3um"]
[ext_resource type="Script" uid="uid://dl8m1t7g2vh5t" path="res://LineRenderer.gd" id="5_huihk"]
[ext_resource type="AudioStream" uid="uid://c2aesa5eri1aa" path="res://819682__hotpin7__blaster-pew.wav" id="6_huihk"]
[ext_resource type="PackedScene" uid="uid://bc8lh0rihgxvi" path="res://Quest2Controllers/Quest2Controllers/OculusQuest2TouchController_Right.gltf" id="6_tw3kd"]
[ext_resource type="Material" uid="uid://ca42xv3x2oh6t" path="res://blue.tres" id="7_vyht1"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_pyidc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vyht1"]
albedo_color = Color(0, 0.611765, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_gd4vy"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qw60f"]
height = 1.0
radius = 0.05

[sub_resource type="ImmediateMesh" id="ImmediateMesh_eji0w"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qwhpj"]
height = 1.0
radius = 0.05

[sub_resource type="ImmediateMesh" id="ImmediateMesh_huihk"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_pq8q7")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
camera_attributes = SubResource("CameraAttributesPractical_pyidc")

[node name="StaticBody3D" type="StaticBody3D" parent="WorldEnvironment"]

[node name="CSGBox3D" type="CSGBox3D" parent="WorldEnvironment/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.109277, -0.0171303, -0.0825638)
material_override = SubResource("StandardMaterial3D_vyht1")
size = Vector3(100, 0.1, 100)

[node name="Ground" type="CollisionShape3D" parent="WorldEnvironment/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 0.1, 100)
shape = SubResource("BoxShape3D_gd4vy")
debug_fill = false

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 0.92189, 0.387451, 0, -0.387451, 0.92189, 0, 3.07384, 3.25695)

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Left" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
tracker = &"left_hand"
script = ExtResource("2_l8v81")

[node name="OculusQuest2TouchController_Left" parent="XROrigin3D/Left" instance=ExtResource("3_vyht1")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Area3D" type="Area3D" parent="XROrigin3D/Left"]

[node name="LeftBeam" type="CollisionShape3D" parent="XROrigin3D/Left/Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.5)
shape = SubResource("CylinderShape3D_qw60f")

[node name="LineRenderer" type="MeshInstance3D" parent="XROrigin3D/Left"]
material_override = ExtResource("4_bf3um")
mesh = SubResource("ImmediateMesh_eji0w")
script = ExtResource("5_huihk")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="XROrigin3D/Left"]
stream = ExtResource("6_huihk")

[node name="Right" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)
tracker = &"right_hand"
script = ExtResource("2_l8v81")
saber_color = "blue"

[node name="OculusQuest2TouchController_Right" parent="XROrigin3D/Right" instance=ExtResource("6_tw3kd")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Area3D" type="Area3D" parent="XROrigin3D/Right"]

[node name="RightBeam" type="CollisionShape3D" parent="XROrigin3D/Right/Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.5)
shape = SubResource("CylinderShape3D_qwhpj")

[node name="LineRenderer" type="MeshInstance3D" parent="XROrigin3D/Right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -1, 0.5)
material_override = ExtResource("7_vyht1")
mesh = SubResource("ImmediateMesh_huihk")
skeleton = NodePath("../../..")
script = ExtResource("5_huihk")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="XROrigin3D/Right"]
stream = ExtResource("6_huihk")

[node name="CubeSpawner" type="Node3D" parent="."]
script = ExtResource("2_bf3um")

[node name="Timer" type="Timer" parent="CubeSpawner"]

[connection signal="button_pressed" from="XROrigin3D/Left" to="XROrigin3D/Left" method="_on_button_pressed"]
[connection signal="area_entered" from="XROrigin3D/Left/Area3D" to="XROrigin3D/Left" method="_on_area_3d_area_entered"]
[connection signal="button_pressed" from="XROrigin3D/Right" to="XROrigin3D/Right" method="_on_button_pressed"]
[connection signal="area_entered" from="XROrigin3D/Right/Area3D" to="XROrigin3D/Right" method="_on_area_3d_area_entered"]
[connection signal="timeout" from="CubeSpawner/Timer" to="CubeSpawner" method="_on_timer_timeout"]
